Added some codes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -24,14 +24,52 @@
         <h1 class="nav-offer">Limited Offer!</h1>
       </div>
       <div class="bottom-nav">
-        <ul>
-          <li class="category"><a href=""></a>AIR FORCE</li>
-          <li class="category"><a href="">BLAZER</a></li>
-          <li class="category"><a href="">JORDAN</a></li>
-          <li class="category"><a href="">CRETAR</a></li>
-          <li class="category"><a href="">HIPPIE</a></li>
-        </ul>
+        <h3 class="nav-item">AIR FORCE</h3>
+        <h3 class="nav-item">BLAZER</h3>
+        <h3 class="nav-item">JORDAN</h3>
+        <h3 class="nav-item">CRATER</h3>
+        <h3 class="nav-item">HIPPIE</h3>
       </div>
     </nav>
+
+    <section class="slider">
+      <div class="slider-Wrapper">
+        <div class="slider-Item">
+          <img src="assets/air.png" alt="" class="slider-img" />
+          <div class="slider-Bg"></div>
+          <h1 class="slider-Title">AIR FORCE<br />NEW<br />SEASON</h1>
+          <h2 class="slider-Price">$39.99</h2>
+          <a href="#product"><button class="buy-button">BUY NOW</button></a>
+        </div>
+        <div class="slider-Item">
+          <img src="assets/blazer.png" alt="" class="slider-img" />
+          <div class="slider-Bg"></div>
+          <h1 class="slider-Title">BLAZER<br />NEW<br />SEASON</h1>
+          <h2 class="slider-Price">$34.99</h2>
+          <a href="#product"><button class="buy-button">BUY NOW</button></a>
+        </div>
+        <div class="slider-Item">
+          <img src="assets/jordan.png" alt="" class="slider-img" />
+          <div class="slider-Bg"></div>
+          <h1 class="slider-Title">JORDAN<br />NEW<br />SEASON</h1>
+          <h2 class="slider-Price">$36.99</h2>
+          <a href="#product"><button class="buy-button">BUY NOW</button></a>
+        </div>
+        <div class="slider-Item">
+          <img src="assets/crater.png" alt="" class="slider-img" />
+          <div class="slider-Bg"></div>
+          <h1 class="slider-Title">CRATER<br />NEW<br />SEASON</h1>
+          <h2 class="slider-Price">$35.99</h2>
+          <a href="#product"><button class="buy-button">BUY NOW</button></a>
+        </div>
+        <div class="slider-Item">
+          <img src="assets/hippie.png" alt="" class="slider-img" />
+          <div class="slider-Bg"></div>
+          <h1 class="slider-Title">HIPPIE<br />NEW<br />SEASON</h1>
+          <h2 class="slider-Price">$39.99</h2>
+          <a href="#product"><button class="buy-button">BUY NOW</button></a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
