Added more codes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body>
     <nav class="main-nav" id="nav">
       <div class="top-nav">
-        <img src="assets/sneakers.png" alt="logo" class="nav-logo" />
+        <a href="#">
+          <img src="assets/sneakers.png" alt="logo" class="nav-logo" />
+        </a>
         <div class="search">
           <input type="text" placeholder="Search..." class="search-input" />
           <img src="assets/search.png" alt="" class="search-icon" />
@@ -71,5 +73,6 @@
         </div>
       </div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
