Added some more codes

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       </div>
       <div class="bottom-nav">
         <h3 class="nav-item">AIR FORCE</h3>
-        <h3 class="nav-item">BLAZER</h3>
         <h3 class="nav-item">JORDAN</h3>
+        <h3 class="nav-item">BLAZER</h3>
         <h3 class="nav-item">CRATER</h3>
         <h3 class="nav-item">HIPPIE</h3>
       </div>
@@ -40,37 +40,92 @@
           <img src="assets/air.png" alt="" class="slider-img" />
           <div class="slider-Bg"></div>
           <h1 class="slider-Title">AIR FORCE<br />NEW<br />SEASON</h1>
-          <h2 class="slider-Price">$39.99</h2>
-          <a href="#product"><button class="buy-button">BUY NOW</button></a>
-        </div>
-        <div class="slider-Item">
-          <img src="assets/blazer.png" alt="" class="slider-img" />
-          <div class="slider-Bg"></div>
-          <h1 class="slider-Title">BLAZER<br />NEW<br />SEASON</h1>
-          <h2 class="slider-Price">$34.99</h2>
+          <h2 class="slider-Price">$119.99</h2>
           <a href="#product"><button class="buy-button">BUY NOW</button></a>
         </div>
         <div class="slider-Item">
           <img src="assets/jordan.png" alt="" class="slider-img" />
           <div class="slider-Bg"></div>
           <h1 class="slider-Title">JORDAN<br />NEW<br />SEASON</h1>
-          <h2 class="slider-Price">$36.99</h2>
+          <h2 class="slider-Price">$149.99</h2>
+          <a href="#product"><button class="buy-button">BUY NOW</button></a>
+        </div>
+        <div class="slider-Item">
+          <img src="assets/blazer.png" alt="" class="slider-img" />
+          <div class="slider-Bg"></div>
+          <h1 class="slider-Title">BLAZER<br />NEW<br />SEASON</h1>
+          <h2 class="slider-Price">$109.99</h2>
           <a href="#product"><button class="buy-button">BUY NOW</button></a>
         </div>
         <div class="slider-Item">
           <img src="assets/crater.png" alt="" class="slider-img" />
           <div class="slider-Bg"></div>
           <h1 class="slider-Title">CRATER<br />NEW<br />SEASON</h1>
-          <h2 class="slider-Price">$35.99</h2>
+          <h2 class="slider-Price">$129.99</h2>
           <a href="#product"><button class="buy-button">BUY NOW</button></a>
         </div>
         <div class="slider-Item">
           <img src="assets/hippie.png" alt="" class="slider-img" />
           <div class="slider-Bg"></div>
           <h1 class="slider-Title">HIPPIE<br />NEW<br />SEASON</h1>
-          <h2 class="slider-Price">$39.99</h2>
+          <h2 class="slider-Price">$99.99</h2>
           <a href="#product"><button class="buy-button">BUY NOW</button></a>
         </div>
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="feature">
+        <img src="assets/shipping.png" alt="" class="featureImg" />
+        <span class="featureTitle">FREE SHIPPING</span>
+        <span class="featureDescription"
+          >Free worldwide shipping on all orders.</span
+        >
+      </div>
+      <div class="feature">
+        <img src="assets/return.png" alt="" class="featureImg" />
+        <span class="featureTitle">30 DAYS RETURN</span>
+        <span class="featureDescription"
+          >No question return and easy refund in 14 days.</span
+        >
+      </div>
+      <div class="feature">
+        <img src="assets/gift.png" alt="" class="featureImg" />
+        <span class="featureTitle">GIFT CARDS</span>
+        <span class="featureDescription"
+          >Buy gift cards and use coupon codes easily.</span
+        >
+      </div>
+      <div class="feature">
+        <img src="assets/contact.png" alt="" class="featureImg" />
+        <span class="featureTitle">CONTACT US!</span>
+        <span class="featureDescription"
+          >Keep in touch via email and support system.</span
+        >
+      </div>
+    </section>
+
+    <section class="product" id="product">
+      <img src="assets/air.png" alt="" class="productImg" />
+      <div class="productDetails">
+        <div class="productTitle">AIR FORCE</div>
+        <div class="productPrice">$119.99</div>
+        <div class="productDescription">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo cum
+          ducimus nobis quibusdam consequuntur nam eligendi aspernatur nihil
+          maxime. Earum ullam dolor id numquam sed, nobis architecto quasi.
+          Quos, in.
+        </div>
+        <div class="productColor">
+          <div class="color"></div>
+          <div class="color"></div>
+        </div>
+        <div class="productSizes">
+          <div class="size">42</div>
+          <div class="size">43</div>
+          <div class="size">44</div>
+        </div>
+        <button class="productButton">BUY NOW</button>
       </div>
     </section>
     <script src="index.js"></script>
