Upto gallery done.

--- a/index.html
+++ b/index.html
@@ -128,6 +128,33 @@
         <button class="productButton">BUY NOW</button>
       </div>
     </section>
+
+    <section class="gallery">
+      <div class="galleryItem">
+        <div class="galleryTitle">Be Yourself!</div>
+        <img
+          src="https://images.pexels.com/photos/1476209/pexels-photo-1476209.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt=""
+          class="galleryImg"
+        />
+      </div>
+      <div class="galleryItem">
+        <img
+          src="https://images.pexels.com/photos/4365446/pexels-photo-4365446.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt=""
+          class="galleryImg"
+        />
+        <div class="galleryTitle">This is the First Day of Your New Life</div>
+      </div>
+      <div class="galleryItem">
+        <div class="galleryTitle">Just Do it!</div>
+        <img
+          src="https://images.pexels.com/photos/18188499/pexels-photo-18188499/free-photo-of-adidas-sneakers-on-feet.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt=""
+          class="galleryImg"
+        />
+      </div>
+    </section>
     <script src="index.js"></script>
   </body>
 </html>
