Added some changes

--- a/index.html
+++ b/index.html
@@ -106,6 +106,26 @@
     </section>
 
     <section class="product" id="product">
+      <div class="cartSection">
+        <h1 class="cartHeader">Cart</h1>
+        <div class="cartItems">
+          <div class="cartRow">
+            <div class="cartColumn cartTitle">Item</div>
+            <div class="cartColumn">Quantity</div>
+            <div class="cartColumn">Price</div>
+          </div>
+          <div class="cartRow">
+            <div class="cartColumn cartTitle">Item</div>
+            <div class="cartColumn">Quantity</div>
+            <div class="cartColumn">Price</div>
+          </div>
+          <div class="cartRow">
+            <div class="cartColumn cartTitle">Item</div>
+            <div class="cartColumn">Quantity</div>
+            <div class="cartColumn">Price</div>
+          </div>
+        </div>
+      </div>
       <img src="assets/air.png" alt="" class="productImg" />
       <div class="productDetails">
         <div class="productTitle">AIR FORCE</div>
@@ -155,6 +175,61 @@
         />
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="leftFooter">
+        <div class="footerMenu">
+          <h1 class="fMenuTitle">About Us</h1>
+          <ul class="fList">
+            <li class="fListItem">Company</li>
+            <li class="fListItem">Contact</li>
+            <li class="fListItem">Careers</li>
+            <li class="fListItem">Affiliates</li>
+            <li class="fListItem">Stores</li>
+          </ul>
+        </div>
+        <div class="footerMenu">
+          <h1 class="fMenuTitle">Useful Links</h1>
+          <ul class="fList">
+            <li class="fListItem">Support</li>
+            <li class="fListItem">Refund</li>
+            <li class="fListItem">FAQ</li>
+            <li class="fListItem">Feedback</li>
+            <li class="fListItem">Stories</li>
+          </ul>
+        </div>
+        <div class="footerMenu">
+          <h1 class="fMenuTitle">Products</h1>
+          <ul class="fList">
+            <li class="fListItem">Air Force</li>
+            <li class="fListItem">Air Jordan</li>
+            <li class="fListItem">Blazer</li>
+            <li class="fListItem">Crater</li>
+            <li class="fListItem">Hippie</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="rightFooter">
+        <h2 class="newsletterTitle">Subscribe to our newsletter</h2>
+        <div class="newsletterMail">
+          <input
+            type="email"
+            placeholder="your@email.com"
+            class="newsletterMailInput"
+          />
+          <button class="newsletterMailBtn">Join!</button>
+        </div>
+        <h2 class="followusTitle">Follow Us</h2>
+        <div class="socialLinks">
+          <img src="assets/facebook.png" alt="" class="socialLinkIcon" />
+          <img src="assets/twitter.png" alt="" class="socialLinkIcon" />
+          <img src="assets/instagram.png" alt="" class="socialLinkIcon" />
+          <img src="assets/whatsapp.png" alt="" class="socialLinkIcon" />
+        </div>
+        <span class="copyright">@Abu Jawad. All rights reserved. 2024</span>
+      </div>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
