Added some codes

--- a/index.html
+++ b/index.html
@@ -107,22 +107,22 @@
 
     <section class="product" id="product">
       <div class="cartSection">
-        <h1 class="cartHeader">Cart</h1>
+        <h1 class="cartSectionTitle">Cart</h1>
         <div class="cartItems">
           <div class="cartRow">
-            <div class="cartColumn cartTitle">Item</div>
-            <div class="cartColumn">Quantity</div>
-            <div class="cartColumn">Price</div>
+            <div class="cartColumn cartItem cartHeader">Item</div>
+            <div class="cartColumn cartPrice cartHeader">Quantity</div>
+            <div class="cartColumn cartQuantity cartHeader">Price</div>
           </div>
           <div class="cartRow">
-            <div class="cartColumn cartTitle">Item</div>
-            <div class="cartColumn">Quantity</div>
-            <div class="cartColumn">Price</div>
+            <div class="cartColumn cartItem">Item</div>
+            <div class="cartColumn cartPrice">Quantity</div>
+            <div class="cartColumn cartQuantity">Price</div>
           </div>
           <div class="cartRow">
-            <div class="cartColumn cartTitle">Item</div>
-            <div class="cartColumn">Quantity</div>
-            <div class="cartColumn">Price</div>
+            <div class="cartColumn cartItem">Item</div>
+            <div class="cartColumn cartPrice">Quantity</div>
+            <div class="cartColumn cartQuantity">Price</div>
           </div>
         </div>
       </div>
