--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Sneakers</title>
   </head>
 
@@ -106,25 +113,44 @@
     </section>
 
     <section class="product" id="product">
+      <div class="cartIcon"><i class="fa-solid fa-cart-shopping"></i></div>
       <div class="cartSection">
-        <h1 class="cartSectionTitle">Cart</h1>
+        <div class="closeCartBtn">&times;</div>
+        <h1 class="cartSectionHeader">Cart</h1>
         <div class="cartItems">
           <div class="cartRow">
             <div class="cartColumn cartItem cartHeader">Item</div>
-            <div class="cartColumn cartPrice cartHeader">Quantity</div>
-            <div class="cartColumn cartQuantity cartHeader">Price</div>
+            <div class="cartColumn cartPrice cartHeader">Price</div>
+            <div class="cartColumn cartQuantity cartHeader">Quantity</div>
           </div>
           <div class="cartRow">
-            <div class="cartColumn cartItem">Item</div>
-            <div class="cartColumn cartPrice">Quantity</div>
-            <div class="cartColumn cartQuantity">Price</div>
+            <div class="cartColumn cartItem">
+              <img src="assets/air.png" alt="" class="cartItemImg" />
+              <span class="cartItemTitle">AIR FORCE</span>
+            </div>
+            <div class="cartColumn cartPrice">$119.99</div>
+            <div class="cartColumn cartQuantity">
+              <input value="1" type="number" class="cartQuantityInput" />
+              <button type="button" class="removeBtn">REMOVE</button>
+            </div>
           </div>
           <div class="cartRow">
-            <div class="cartColumn cartItem">Item</div>
-            <div class="cartColumn cartPrice">Quantity</div>
-            <div class="cartColumn cartQuantity">Price</div>
+            <div class="cartColumn cartItem">
+              <img src="assets/blazer2.png" alt="" class="cartItemImg" />
+              <span class="cartItemTitle">BLAZER</span>
+            </div>
+            <div class="cartColumn cartPrice">$109.99</div>
+            <div class="cartColumn cartQuantity">
+              <input value="1" type="number" class="cartQuantityInput" />
+              <button type="button" class="removeBtn">REMOVE</button>
+            </div>
           </div>
         </div>
+        <div class="cartTotal">
+          <span class="cartTotalTitle">Total</span>
+          <span class="cartTotalPrice">$299.98</span>
+        </div>
+        <button type="button" class="purchaseBtn">PURCHASE</button>
       </div>
       <img src="assets/air.png" alt="" class="productImg" />
       <div class="productDetails">
@@ -145,7 +171,7 @@
           <div class="size">43</div>
           <div class="size">44</div>
         </div>
-        <button class="productButton">BUY NOW</button>
+        <button class="productButton">Add To Cart</button>
       </div>
     </section>
 
