Almost complete just need to make responsive

--- a/index.html
+++ b/index.html
@@ -116,39 +116,18 @@
       <div class="cartIcon"><i class="fa-solid fa-cart-shopping"></i></div>
       <div class="cartSection">
         <div class="closeCartBtn">&times;</div>
-        <h1 class="cartSectionHeader">Cart</h1>
+        <h1 class="cartSectionHeader">Your Cart</h1>
         <div class="cartItems">
           <div class="cartRow">
             <div class="cartColumn cartItem cartHeader">Item</div>
             <div class="cartColumn cartPrice cartHeader">Price</div>
             <div class="cartColumn cartQuantity cartHeader">Quantity</div>
           </div>
-          <div class="cartRow">
-            <div class="cartColumn cartItem">
-              <img src="assets/air.png" alt="" class="cartItemImg" />
-              <span class="cartItemTitle">AIR FORCE</span>
-            </div>
-            <div class="cartColumn cartPrice">$119.99</div>
-            <div class="cartColumn cartQuantity">
-              <input value="1" type="number" class="cartQuantityInput" />
-              <button type="button" class="removeBtn">REMOVE</button>
-            </div>
-          </div>
-          <div class="cartRow">
-            <div class="cartColumn cartItem">
-              <img src="assets/blazer2.png" alt="" class="cartItemImg" />
-              <span class="cartItemTitle">BLAZER</span>
-            </div>
-            <div class="cartColumn cartPrice">$109.99</div>
-            <div class="cartColumn cartQuantity">
-              <input value="1" type="number" class="cartQuantityInput" />
-              <button type="button" class="removeBtn">REMOVE</button>
-            </div>
-          </div>
         </div>
+
         <div class="cartTotal">
           <span class="cartTotalTitle">Total</span>
-          <span class="cartTotalPrice">$299.98</span>
+          <span class="cartTotalPrice">$0</span>
         </div>
         <button type="button" class="purchaseBtn">PURCHASE</button>
       </div>
