added more codes almost complete

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 
     <section class="product" id="product">
       <div class="cartIcon"><i class="fa-solid fa-cart-shopping"></i></div>
+      <div class="cartItemCounter"></div>
       <div class="cartSection">
         <div class="closeCartBtn">&times;</div>
         <h1 class="cartSectionHeader">Your Cart</h1>
